@@ -12,4 +12,18 @@ class ConchError(Exception):
         Exception.__init__(self, value)
         self.data = data
 
+class NotEnoughAuthentication(Exception):
+    """This is thrown if the authentication is valid, but is not enough to
+    successfully verify the user.  i.e. don't retry this type of
+    authentication, try another one.
+    """
 
+class ValidPublicKey(Exception):
+    """This is thrown during the authentication process if the public key
+    is valid for the user.
+    """
+
+class IgnoreAuthentication(Exception):
+    """This is thrown to let the UserAuthServer know it doesn't need to handle
+    the authentication anymore.
+    """
